<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvEnunciado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:gravity="center_horizontal"
            android:text="@string/tv_enunciado"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etuNumeroIntroducido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="25dp"
            android:autofillHints="@string/et_numero"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/et_numero"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <Button
            android:id="@+id/btnVerificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="25dp"
            android:onClick="validarNumero"
            android:text="@string/btn_verificar"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/btnVolverAJugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="60dp"
            android:onClick="volverAJugar"
            android:text="@string/btn_retry"
            app:cornerRadius="20dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>